<?xml version="1.0" encoding="utf-8"?>
<!-- Author:Wang Lei -->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
	<string name="app_name">AppLock</string>
	<string name="enable_access_control">Enable app lock</string>
	<string name="protect_applicationgs">Protect applicationgs</string>
	<string name="protect_guarded_mode">Protect guarded mode</string>
	<string name="make_pattern_visible">Make pattern visible</string>
	<string name="vibrate_on_touch">Vibrate on touch</string>
	<string name="lockpassword_choose_your_pattern_sub_title">Draw pattern to create password lock</string>
	<string name="lockpassword_confirm_your_pattern_sub_title">Password required to unlock</string>
	<string name="lockpassword_confirm_your_pattern_sub_title_2"> has been protected\n</string>
	<string name="lockpassword_choose_your_pattern_header">Choose your pattern</string>
	<string name="lockpassword_confirm_your_pattern_header">Confirm your pattern</string>
	<string name="lockpattern_need_to_unlock_wrong">Try again:</string>
	<string name="lockpattern_recording_inprogress">Release finger when done.</string>
	<string name="lockpattern_recording_incorrect_too_short">Connect at least <xliff:g id="number">%d</xliff:g> dots. Try again:</string>
	<string name="lockpattern_pattern_entered_header">Pattern recorded!</string>
	<string name="lockpattern_need_to_confirm">Draw pattern again to confirm:</string>
	<string name="lockpattern_pattern_confirmed_header">Your new unlock pattern:</string>
	<string name="lockpattern_confirm_button_text">Confirm</string>
	<string name="lockpattern_restart_button_text">Redraw</string>
	<string name="lockpattern_retry_button_text">Retry</string>
	<string name="lockpattern_continue_button_text">Continue</string>
	<string name="fingerprint_protect_applicationgs">Fingerprint protect application</string>
	<!--lvhuaiyi add begin-->
	<string name="select_applicationgs">Select the locked applications</string>
	<string name="password_protect">Password protect</string>
	<string name="fingerprint_protect">Fingerprint protect</string>
	<string name="select_summary">Select protectd application from the list</string>
	<string name="password_protect_summary">Enrol password that protect application</string>
	<string name="fingerprint_protect_summary">Enrol fingerprint that protect application</string>
	<string name="password_modify_summary">Modify password that protect application</string>
	<string name="fingerprint_modify_summary">Modify fingerprint that protect application</string>	

  <string name="private_password_modified_title">Change Private Password</string>
  <string name="app_lock_set_pwd_title">Set Password</string>
  <string name="app_lock_confirm_password">Confirm Password:</string>
  <string name="app_lock_pwd_missmatch">Password miss match or empty, please set again.</string>
  <string name="app_lock_login_title">Input Password</string>
  <string name="app_lock_input_password">Password:</string>
  <string name="app_lock_dispaly_password">Display password</string>
  <string name="app_lock_ok">OK</string>
  <string name="app_lock_cancel">Cancel</string>
  <string name="app_lock_pwd_wrong">Wrong password, please set again.</string>
  <string name="app_lock_errort_title">warning</string>
  <string name="app_lock_input_cur_password">Old password:</string>
  <string name="app_lock_input_new_password">New password:</string>
  <string name="app_lock_confirm_new_password">Confirm new password:</string>
  <string name="app_lock_pwd_empty">Password should not be empty, please set again.</string>
  <string name="app_lock_reset_password_same_error">Your new password and old password is same, please set again.</string>
  <string name="app_lock_reset_pwd_succeed">Password reset succeed</string>
  <string name="app_lock_chang_password_error1">Old password wrong.</string>
  <string name="app_lock_chang_password_error2">New passwords and Confirm Password missmatch.</string>
  <string name="app_lock_chang_password_error3">Passwords and Confirm Password missmatch.</string>	
    
  <string name="try_again">Please try again</string>
  <string name="swipe_again">Good, swipe again!</string>
  <string name="wrong_finger">Finger already registered, please use another finger</string>
  <string name="swipe_other">Please swipe another registered finger!</string>
  <string name="enrol_activity">Enrol</string>
  <string name="verify_activity">Verify</string>
  <string name="enrol_select_finger">Please select a finger on the screen</string>
  <string name="enrol_string">Press enrol to enrol finger</string>
  <string name="enrol_label">Enrol</string>
  <string name="enrol_title">Fingerprint Setup for Screen Unlock</string>
  <string name="choose_shortcut">Select an app from the list</string>
  <string name="delete_template">Delete finger registration</string>
  <string name="save_template">Save finger registration</string>
  <string name="no_shortcut">Do not use a shortcut for this finger</string>
  <string name="swipe_good">Good Swipe</string>
  <string name="swipe_too_fast">Swipe speed is too fast</string>
  <string name="swipe_too_skewed">A fingerprint image is too skewed</string>
  <string name="swipe_too_short">A fingerprint image is too short</string>
  <string name="swipe_not_centered">Swipe in the center</string>    
  <string name="app_name_fingerprints">FingerPrints</string>
  <string name="open_finger_prints_unlock">Open FingerPrintsUnlock</string>
  <string name="open_finger_prints_unlock_info">Show FingerPrintsUnlock UI When Phone Lock</string>
  <string name="fingerprints_acquisition">Fingerprints acquisition</string>
  <string name="str_select_finger">Select finger</string>
  <string name="left_hand">Left Hand</string>
  <string name="right_hand">Right Hand</string>
  <string name="enrol_start_prompt_text">Follow the picture:Please place finger on the fingerprints sensor, then swip finger from up to down.\n\nNote: keep sensor clean and press it when swip.</string>
  <string name="enrol_starting_prompt_text">Please repeat the fingers along the fingerprints sensor operation.\n\nNote: keep sensor clean and press it when swip.</string>
  <string name="enrolling_fingerprint">Enrolling fingerprint...</string>
  <string name="enrol_fingerprint_try_again">Please try again!</string>
  <string name="enrol_fingerprint_swipe_again">Good, swipe again!</string>
  <string name="application_list_title">Define %s</string>
  <string name="application_list_prompt">Swip %s fingerprint directly to the application from the lock screen</string>
  <string name="application_list_screen_unlock">Screen unlock</string>
  <string name="enrol_verify_try_again">Fingerprint is unmatched, please try again!</string>
  <string name="enrol_verify_modify_title">Verification succeed, you can</string>
  <string name="enrol_succeed_title">Enrolling succeed</string>
  <string name="enrol_succeed_message">The fingerprint will be used for app lock.</string>    
  <string name="entry_by_password">Entry by password</string>  
  <string name="entry_by_fingerPrint">Fingerprint has been enroled\n entry the application by fingerprint</string>    
  <string name="entry_by_fingerPrint_error">Fingerprint verified error\n entry the application by other method or try again</string>    			
  <string name="verifying_fingerprint">Verifying fingerprint...</string>    
  <string name="entry_by_fingerPrint_succeed">Fingerprint verified succeed</string> 
  <string name="fingerPrint_no_enroled">Fingerprint has not been enroled\n entry the application only by password</string>
  <string name="verify_password">verify password</string>
  <string name="overflow_finger_verify_max">"Fingerprint verify has overflow,please use password confirm to entry the application!"</string>
  <!--lvhuaiyi add end-->			
</resources>