<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
	android:orientation="vertical" 
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout 
    	android:orientation="vertical" 
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content">
        <ScrollView 
        	android:layout_width="fill_parent" 
        	android:layout_height="wrap_content" 
        	android:layout_marginLeft="10.0dip" 
        	android:layout_marginTop="10.0dip" 
        	android:layout_marginRight="10.0dip" 
        	android:layout_marginBottom="10.0dip">
            <LinearLayout 
            	android:orientation="vertical" 
            	android:layout_width="fill_parent" 
            	android:layout_height="wrap_content">
                <TextView 
                	android:textAppearance="?android:textAppearanceMedium" 
                	android:textColor="#FF000000"
                	android:id="@+id/textview_password" 
                	android:layout_width="fill_parent" 
                	android:layout_height="wrap_content" 
                	android:text="@string/app_lock_input_password" />
                <EditText 
                	android:id="@+id/input_password" 
                	style="@style/password_edittext"
                	android:layout_width="fill_parent" 
                	android:layout_height="wrap_content" 
                	android:singleLine="true" 
                	android:maxLength="16" 
                	android:digits="0123456789" 
                	android:inputType="numberPassword" />
                <TextView 
                	android:textAppearance="?android:textAppearanceMedium" 
                	android:textColor="#FF000000"
                	android:id="@+id/textview_confrim_password" 
                	android:layout_width="fill_parent" 
                	android:layout_height="wrap_content" 
                	android:text="@string/app_lock_confirm_password" />
                <EditText 
                	android:id="@+id/confirm_password" 
                	style="@style/password_edittext"
                	android:layout_width="fill_parent" 
                	android:layout_height="wrap_content" 
                	android:singleLine="true" 
                	android:maxLength="16" 
                	android:digits="0123456789" 
                	android:inputType="numberPassword"/>
                <CheckBox 
                	android:textAppearance="?android:textAppearanceSmall" 
                	android:id="@+id/display_password" 
                	android:layout_width="wrap_content" 
                	android:layout_height="wrap_content" 
                	android:checked="false" 
                	android:text="@string/app_lock_dispaly_password" 
                	android:visibility="gone"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>